feat(UserRepository): 업데이트된 User 객체를 반환하도록 수정